plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.hibernate.orm' version '7.1.3.Final'
    id 'com.github.ben-manes.versions' version '0.53.0'
}

group = 'com.project'
version = '0.0.1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

ext {
    elasticVersion = "8.18.1"
}

dependencyManagement {
    imports {
        mavenBom "co.elastic.clients:elasticsearch-java:${elasticVersion}"
    }
}

dependencies {
    // ------------------- Spring Boot 核心 -------------------
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // ------------------- Database & Migration -------------------
    implementation 'com.mysql:mysql-connector-j:8.0.33'
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.6'
    implementation 'org.flywaydb:flyway-mysql:11.17.0'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.2.0'

    // ------------------- JWT Token -------------------
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    // ------------------- Lombok -------------------
    compileOnly 'org.projectlombok:lombok:1.18.42'
    annotationProcessor 'org.projectlombok:lombok:1.18.42'

    // ------------------- File & Image -------------------
    implementation 'org.apache.pdfbox:pdfbox:3.0.5'
    implementation 'org.apache.pdfbox:jbig2-imageio:3.0.4'
    implementation 'org.apache.pdfbox:xmpbox:3.0.5'
    implementation 'com.github.jai-imageio:jai-imageio-core:1.4.0'
    implementation 'com.github.jai-imageio:jai-imageio-jpeg2000:1.4.0'
    implementation 'io.documentnode:epub4j-core:4.2.2'
    implementation 'com.github.junrar:junrar:7.5.5'

    // ------------------- JSON / HTML -------------------
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.20.0'
    implementation 'org.jsoup:jsoup:1.21.2'

    // ------------------- DTO Converter -------------------
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    // ------------------- OpenAPI UI -------------------
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
    implementation 'org.apache.commons:commons-compress:1.28.0'
    implementation 'org.apache.commons:commons-text:1.14.0'

    // ------------------- Test -------------------
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.assertj:assertj-core:3.27.3'
    testImplementation 'org.mockito:mockito-inline:5.2.0'

    // ------------------- MinIO -------------------
    implementation 'io.minio:minio:8.5.7'

    // ------------------- Mybatis -------------------
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'

    // ------------------- Redis -------------------
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // ------------------- RabbitMQ -------------------
    implementation 'org.springframework.boot:spring-boot-starter-amqp'

    // ------------------- MongoDB -------------------
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    // ------------------- Elasticsearch Client -------------------
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
    implementation "co.elastic.clients:elasticsearch-java:${elasticVersion}"

    // ------------------- PageHelper -------------------
    implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:2.0.0'

    implementation 'org.apache.pdfbox:pdfbox:2.0.30'

}

hibernate {
    enhancement {
        enableAssociationManagement = true
    }
}

test {
    useJUnitPlatform()
    jvmArgs("-XX:+EnableDynamicAgentLoading")
}
